Initial commit including POM changes